--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,6 +1,5 @@
 @import url('../../Helper/Reset.css');
-@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
-
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&display=swap');
 
 :root {
     --h1: 48px;
@@ -13,13 +12,15 @@
     --white: #FFFFFF;
 }
 
+
+
 @media (max-width: 767px) {
 
 
     .mainContainer {
         display: flex;
         flex-flow: column wrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         height: 100%;
 
@@ -51,17 +52,16 @@
         opacity: 1;
         font-family: "Poppins", sans-serif;
         font-style: normal;
-        font-size: 16px;
+        font-size: 18px;
         margin-bottom: 10px;
     }
 
     .mainContainer__text {
-        font-size: 13px;
+        font-size: 15px;
         font-weight: bolder;
         margin-bottom: 10px;
         color: #fff;
         font-family: "Poppins", sans-serif;
-
         text-align: center;
     }
 
@@ -76,7 +76,6 @@
 
     .mainContainer__footer {
         z-index: 2;
-        margin-bottom: 80px;
     }
 
 }
@@ -86,7 +85,7 @@
     .mainContainer {
         display: flex;
         flex-flow: column wrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         height: 100%;
         background-position: top;
@@ -142,7 +141,6 @@
 
     .mainContainer__footer {
         z-index: 2;
-        margin-bottom: 20px;
     }
 
 
@@ -154,7 +152,7 @@
     .mainContainer {
         display: flex;
         flex-flow: column wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         height: 100%;
     }
@@ -214,7 +212,6 @@
 
     .mainContainer__footer {
         z-index: 2;
-        margin-bottom: 20px;
     }
 
 
