--- a/src/components/SobreMi/SobreMi.css
+++ b/src/components/SobreMi/SobreMi.css
@@ -1,4 +1,5 @@
 @import url('../../Helper/Reset.css');
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&display=swap');
 
 :root {
     --h1: 48px;
@@ -12,6 +13,7 @@
 }
 
 
+
 @media (max-width: 767px) {
 
     .generalContainer {
@@ -21,11 +23,17 @@
     }
 
     .generalContainer__titulo {
-        color: #fff;
         margin-top: 20px;
-        font-size: 40px;
+        font-family: Poppins;
+        font-size: var(--h1);
+        font-weight: 700;
+        line-height: 48px;
+        letter-spacing: -0.02em;
+        text-align: center;
+        color: #FFFFFF;
         font-style: normal;
-        font-family: 'Montserrat';
+
+
     }
 
     .aboutContainer {
@@ -48,12 +56,13 @@
         position: relative;
         left: -100px;
         transition: all 3s ease;
-        width: 240px;
-        height: 240px;
+        width: 488px;
+        height: 300px;
         opacity: 0.1;
         overflow: hidden;
-        border-radius: 50%;
         margin-bottom: 30px;
+        border-radius: 40px 0px 40px 0px;
+
     }
 
 
@@ -83,10 +92,13 @@
     }
 
     .aboutContainer__textoContenedor__parrafo {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: lighter;
-        font-size: 12px;
-        line-height: 2rem;
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: center;
+        
     }
 
     .bigraphyCard {
@@ -133,11 +145,17 @@
     }
 
     .generalContainer__titulo {
-        color: #fff;
         margin-top: 20px;
-        font-size: 40px;
+        font-family: Poppins;
+        font-size: var(--h1);
+        font-weight: 700;
+        line-height: 48px;
+        letter-spacing: -0.02em;
+        text-align: center;
+        color: #FFFFFF;
         font-style: normal;
-        font-family: 'Montserrat';
+
+
     }
 
     .aboutContainer {
@@ -165,6 +183,7 @@
         overflow: hidden;
         border-radius: 50%;
         margin-bottom: 30px;
+        border-radius: 40px 0px 40px 0px;
     }
 
     .container2 {
@@ -194,10 +213,13 @@
     }
 
     .aboutContainer__textoContenedor__parrafo {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: lighter;
-        font-size: 18px;
-        line-height: 2rem;
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: center;
+        
     }
 
     .bigraphyCard {
@@ -243,11 +265,16 @@
     }
 
     .generalContainer__titulo {
-        color: #fff;
         margin-top: 20px;
-        font-size: 40px;
+        font-family: Poppins;
+        font-size: var(--h1);
+        font-weight: 700;
+        line-height: 48px;
+        letter-spacing: -0.02em;
+        text-align: center;
+        color: #FFFFFF;
         font-style: normal;
-        font-family: 'Montserrat';
+
     }
 
     .aboutContainer {
@@ -275,6 +302,7 @@
         overflow: hidden;
         border-radius: 50%;
         margin-bottom: 30px;
+        border-radius: 40px 0px 40px 0px;
     }
 
     .container2 {
@@ -290,17 +318,23 @@
     }
 
     .aboutContainer__textoContenedor__titulo {
-        text-align: center;
-        font-family: 'Montserrat';
-        font-weight: 500;
-        text-transform: capitalize;
+        font-family: Poppins;
+        font-size: var(--h2);
+        font-weight: 700;
+        line-height: 36px;
+        letter-spacing: -0.02em;
+        text-align: right;
+        
     }
 
     .aboutContainer__textoContenedor__parrafo {
-        font-family: 'Montserrat';
-        font-weight: lighter;
-        font-size: 18px;
-        line-height: 2rem;
+        font-family: Poppins;
+        font-size: var(--body);
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: -0.02em;
+        text-align: right;
+        
     }
 
     .bigraphyCard {
