feat, sobre mi section finished

--- a/src/components/SobreMi/SobreMi.css
+++ b/src/components/SobreMi/SobreMi.css
@@ -52,17 +52,24 @@
         margin-top: 90px;
     }
 
+    .expodrummer {
+        margin-bottom: 100px;
+    }
+
     .aboutContainer__imagenContenedor {
         position: relative;
         left: -100px;
         transition: all 3s ease;
-        width: 488px;
-        height: 300px;
         opacity: 0.1;
         overflow: hidden;
         margin-bottom: 30px;
-        border-radius: 40px 0px 40px 0px;
+        width: 90%;
+        height: 200px;
+        text-align: center;
+    }
 
+    .aboutContainer__imagenContenedor>img {
+        height: 100%;
     }
 
 
@@ -98,27 +105,7 @@
         line-height: 22px;
         letter-spacing: -0.02em;
         text-align: center;
-        
-    }
 
-    .bigraphyCard {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 50px;
-        padding: 20px;
-    }
-
-    .bigraphyCard>h2 {
-        color: #fff;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-weight: bolder;
-        text-transform: capitalize;
-        font-size: 20px;
-        margin-bottom: 50px;
-        text-transform: uppercase;
     }
 
     .aboutMeEffect {
@@ -173,17 +160,23 @@
         margin-top: 90px;
     }
 
+    .expodrummer {
+        margin-bottom: 100px;
+    }
+
     .aboutContainer__imagenContenedor {
         position: relative;
         left: -100px;
         transition: all 3s ease;
-        width: 300px;
-        height: 300px;
         opacity: 0.1;
         overflow: hidden;
-        border-radius: 50%;
         margin-bottom: 30px;
-        border-radius: 40px 0px 40px 0px;
+        width: 80%;
+        text-align: center;
+    }
+
+    .aboutContainer__imagenContenedor>img {
+        height: 100%;
     }
 
     .container2 {
@@ -219,26 +212,7 @@
         line-height: 22px;
         letter-spacing: -0.02em;
         text-align: center;
-        
-    }
 
-    .bigraphyCard {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 50px;
-    }
-
-    .bigraphyCard>h2 {
-        color: #fff;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-weight: bolder;
-        text-transform: capitalize;
-        font-size: 20px;
-        margin-bottom: 50px;
-        text-transform: uppercase;
     }
 
 
@@ -292,17 +266,17 @@
         margin-top: 90px;
     }
 
+    .expodrummer {
+        margin-bottom: 100px;
+    }
+
     .aboutContainer__imagenContenedor {
         position: relative;
         left: -100px;
         transition: all 3s ease;
-        width: 300px;
-        height: 300px;
         opacity: 0.1;
         overflow: hidden;
-        border-radius: 50%;
         margin-bottom: 30px;
-        border-radius: 40px 0px 40px 0px;
     }
 
     .container2 {
@@ -324,7 +298,7 @@
         line-height: 36px;
         letter-spacing: -0.02em;
         text-align: right;
-        
+
     }
 
     .aboutContainer__textoContenedor__parrafo {
@@ -334,28 +308,12 @@
         line-height: 22px;
         letter-spacing: -0.02em;
         text-align: right;
-        
+
     }
 
-    .bigraphyCard {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 50px;
+    .left {
+        text-align: left;
     }
-
-    .bigraphyCard>h2 {
-        color: #fff;
-        text-align: center;
-        font-family: 'Montserrat';
-        font-weight: bolder;
-        text-transform: capitalize;
-        font-size: 20px;
-        margin-bottom: 50px;
-        text-transform: uppercase;
-    }
-
 
 
     .aboutMeEffect {
