--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -17,7 +17,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../../img/Background-2.avif");
+  background-image: url("https://i.ibb.co/rcbJqdQ/Background-3.png");
   background-position: top;
   background-size: cover;
   background-attachment: fixed;
