--- a/src/components/CardsOtros/CardOtros.css
+++ b/src/components/CardsOtros/CardOtros.css
@@ -12,8 +12,6 @@
     --white: #FFFFFF;
 }
 
-
-
 @media (max-width: 767px) {
 
     .cardOtherServices {
@@ -48,11 +46,11 @@
         margin-top: 20px;
     }
 
-    .cardContent button {
+    .cardContent article {
         display: flex;
+        justify-content: center;
         width: 140px;
         height: 48px;
-        padding: 12px, 16px, 12px, 24px;
         border-radius: 6px;
         border: 1px solid var(--primary);
         gap: 10px;
@@ -64,8 +62,17 @@
         text-align: left;
         color: var(--primary);
         margin-top: 20px;
+        align-items: center;
 
 
+    }
+
+    .socialLink{
+        text-decoration: none;
+        color: var(--primary);
+    }
+    .socialLink > span {
+        margin-right: 10px;
     }
 
 }
@@ -108,12 +115,11 @@
     }
 
 
-    .cardContent button {
+    .cardContent article {
         display: flex;
-        align-self: end;
+        justify-content: center;
         width: 140px;
         height: 48px;
-        padding: 12px, 16px, 12px, 24px;
         border-radius: 6px;
         border: 1px solid var(--primary);
         gap: 10px;
@@ -124,8 +130,17 @@
         letter-spacing: -0.02em;
         text-align: left;
         color: var(--primary);
+        align-items: center;
 
 
+    }
+
+    .socialLink{
+        text-decoration: none;
+        color: var(--primary);
+    }
+    .socialLink > span {
+        margin-right: 10px;
     }
 }
 
@@ -174,12 +189,11 @@
         width: 275px;
     }
 
-    .cardContent button {
+    .cardContent article {
         display: flex;
-        align-self: end;
+        justify-content: center;
         width: 140px;
         height: 48px;
-        padding: 12px, 16px, 12px, 24px;
         border-radius: 6px;
         border: 1px solid var(--primary);
         gap: 10px;
@@ -191,6 +205,14 @@
         text-align: left;
         color: var(--primary);
         margin-top: 25px;
+        align-items: center;
 
+    }
+    .socialLink{
+        text-decoration: none;
+        color: var(--primary);
+    }
+    .socialLink > span {
+        margin-right: 10px;
     }
 }
