feat new checking

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url("https://i.ibb.co/rcbJqdQ/Background-3.png");
   background-position: top;
   background-size: cover;
