--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -32,7 +32,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background-image: url("https://i.ibb.co/4jngJX5/Johan-mobile.jpg");
         background-position: top;
         background-size: cover;
