--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -16,13 +16,14 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 105vh;
   background-image: url("https://i.ibb.co/rcbJqdQ/Background-3.png");
   background-position: top;
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  z-index: -1; /* Añade un z-index para colocar el pseudo-elemento detrás del contenido del contenedor */
+  z-index: -1;
+  /* Añade un z-index para colocar el pseudo-elemento detrás del contenido del contenedor */
 }
 
 h1 {
