--- a/src/components/UpArrow/UpArrow.css
+++ b/src/components/UpArrow/UpArrow.css
@@ -1,4 +1,3 @@
-
 :root {
     --h1: 48px;
     --h2: 32px;
@@ -10,19 +9,23 @@
     --white: #FFFFFF;
 }
 
+button {
+    border: none;
+}
+
 
 .appear {
     display: flex;
     align-items: center;
-    padding:0px;
+    padding: 0px;
     background-repeat: no-repeat;
-    font-size:20px;
+    font-size: 20px;
     font-weight: bolder;
     background-color: var(--primary);
-    cursor:pointer;
+    cursor: pointer;
     position: fixed;
-    bottom:20px;
-    right:20px;
+    bottom: 20px;
+    right: 20px;
     height: 48px;
     z-index: 2;
     border-radius: 50%;
@@ -30,7 +33,7 @@
     transition: all .5s ease;
 }
 
-.disappear{
+.disappear {
     opacity: 0;
     transition: all .5s ease;
 }
