fixing succes alert from form

--- a/src/components/WindowForm/WindowForm.css
+++ b/src/components/WindowForm/WindowForm.css
@@ -1,6 +1,16 @@
 @import url('../../Helper/Reset.css');
-@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&display=swap');
 
+:root {
+  --h1: 48px;
+  --h2: 32px;
+  --h3: 20px;
+  --body: 16px;
+  --link: 16px;
+  --primary: #A92935;
+  --dark: #1E1E1E;
+  --white: #FFFFFF;
+}
 
 .modal-content {
   background-color: transparent;
@@ -10,6 +20,7 @@
 .modal-header {
   display: none;
 }
+
 .modal-body {
   display: flex;
   justify-content: center;
@@ -18,7 +29,7 @@
 h1 {
   color: rgb(0, 0, 0);
   margin-bottom: 50px;
-  width: 100% ;
+  width: 100%;
   text-align: center;
   font-weight: bolder;
   text-transform: uppercase;
@@ -34,6 +45,19 @@ h1 {
   font-family: 'Montserrat';
   color: red;
   font-size: 12px;
+  margin: 5px;
+}
+
+.titleLabel {
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 15px;
+  text-transform: capitalize;
+  line-height: 22px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: var(--white);
 }
 
 input[type="submit"] {
@@ -60,35 +84,44 @@ input[type="submit"] {
   align-self: center;
   justify-self: center;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: #1E1E1E;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .container__form__title {
-  font-family: 'Montserrat';
-  margin: 5px;
-  margin-bottom: 20px;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: var(--white);
   font-style: normal;
+
+}
+
+label {
+  margin: 5px;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="number"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  background-color: transparent;
+  height: 48px;
+  padding: 13px, 12px, 13px, 12px;
+  border-radius: 6px;
+  border: 1px;
+  gap: 10px;
+  background-color: var(--white);
   box-sizing: border-box;
   /* Esto hace que el padding no afecte el ancho total */
-  font-size: 12px;
-  font-family: 'Montserrat';
+  font-size: 16px;
 }
 
 input[type="radio"] {
-  font-family: 'Montserrat';
+  font-family: Poppins;
 
 }
 
@@ -100,27 +133,28 @@ input:focus {
 .radioLabel {
   font-family: 'Montserrat';
   font-size: 12px;
+  margin: 0px !important;
 }
 
 ::placeholder {
-  font-family: 'Montserrat';
-  color: #000000;
+  font-family: Poppins;
+  color: var(--dark);
   font-size: 12px;
+  margin-top: 20px;
 }
 
 /* Estilos para textarea */
 textarea {
-  width: 100%;
-  padding: 10px;
+  padding: 13px, 12px, 47px, 12px;
+  border-radius: 6px;
+  border: 1px;
+  gap: 10px;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
-  background-color: transparent;
-  font-family: 'Montserrat';
-  border-radius: 5px;
   box-sizing: border-box;
-  font-size: 12px;
+  font-size: 16px;
   resize: vertical;
   /* Permite cambiar solo la altura vertical */
+  font-family: inherit;
   resize: none;
   margin-top: 10px;
 }
@@ -133,4 +167,23 @@ textarea:focus {
 .css-sghohy-MuiButtonBase-root-MuiButton-root {
   display: flex;
   align-self: center;
+}
+
+.submitButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary);
+  padding: 12px, 16px, 12px, 24px;
+  border-radius: 6px;
+  gap: 10px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: var(--white);
+  height: 48px;
+
 }
