--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,83 +1,33 @@
-.loader-container {
-	width: 100%;
-	height: 100vh;
-	z-index: 999;
-	background-color: rgb(255, 255, 255);
-
-}
-
-.data-loader {
-	width: 100%;
-	height: 100%;
-	padding: 2px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.data-loader>div:last-child {
-	position: relative;
+/* HTML: <div class="loader"></div> */
+.loader {
 	width: 80px;
-	height: 15px;
-	margin: 1em auto;
-}
-
-.data-loader>div:last-child>div {
-	position: absolute;
-	top: 0;
-	width: 13px;
-	height: 13px;
-	border-radius: 50%;
-	background: #000000;
-	animation-timing-function: cubic-bezier(0, 1, 1, 0);
-}
-
-.data-loader>div:last-child>div:nth-child(1) {
-	left: 8px;
-	animation: data-loader-1 0.6s infinite;
-}
-
-.data-loader>div:last-child>div:nth-child(2) {
-	left: 8px;
-	animation: data-loader-2 0.6s infinite;
-}
-
-.data-loader>div:last-child>div:nth-child(3) {
-	left: 32px;
-	animation: data-loader-2 0.6s infinite;
-}
-
-.data-loader>div:last-child>div:nth-child(4) {
-	left: 56px;
-	animation: data-loader-3 0.6s infinite;
-}
-
-@keyframes data-loader-1 {
-	0% {
-		transform: scale(0);
-	}
-
-	100% {
-		transform: scale(1);
-	}
-}
-
-@keyframes data-loader-2 {
-	0% {
-		transform: translate(0, 0);
-	}
-
-	100% {
-		transform: translate(24px, 0);
-	}
-}
-
-@keyframes data-loader-3 {
-	0% {
-		transform: scale(1);
-	}
-
-	100% {
-		transform: scale(0);
-	}
-}
+	height: 40px;
+	display: flex;
+	justify-self: center;
+	align-self: center;
+  }
+  .loader::before,
+  .loader::after {
+	content: "";
+	flex: 1;
+	clip-path: polygon(0 0,100% 0,100% 100%);
+	background: #FC3A51;
+	animation: 
+	  l15-1 1s infinite linear alternate,
+	  l15-2 2s infinite linear -.5s;
+  }
+  .loader::after {
+	--s:-1,-1;
+  }
+  @keyframes l15-1 {
+	0%,
+	10%  {transform:scale(var(--s,1)) translate(0px)   perspective(150px) rotateY(0deg) }
+	33%  {transform:scale(var(--s,1)) translate(-10px) perspective(150px) rotateX(0deg) }
+	66%  {transform:scale(var(--s,1)) translate(-10px) perspective(150px) rotateX(-180deg)}
+	90%,
+	100% {transform:scale(var(--s,1)) translate(0px)   perspective(150px) rotateX(-180deg)}
+  }
+  @keyframes l15-2 {
+	0%,49.99% {background:#FC3A51}
+	50%,100%  {background:#EB9F9F}
+  }
