--- a/src/components/Success/Success.css
+++ b/src/components/Success/Success.css
@@ -1,18 +1,32 @@
-/* SuccessMessage.css */
+@import url('../../Helper/Reset.css');
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&display=swap');
 
-.success-message {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #4CAF50; /* Color verde de éxito, puedes ajustarlo según tus preferencias */
-    color: #ffffff; /* Color del texto */
-    padding: 10px;
-    border-radius: 5px;
-    margin-top: 10px;
-  }
-  
-  .success-message span {
-    font-size: 20px;
-    margin-right: 10px;
-  }
-  
+:root {
+    --h1: 48px;
+    --h2: 32px;
+    --h3: 20px;
+    --body: 16px;
+    --link: 16px;
+    --primary: #A92935;
+    --dark: #1E1E1E;
+    --white: #FFFFFF;
+}
+
+.mi-titulo-clase{
+    font-family: Poppins;
+}
+.mi-contenido-clase{
+    font-family: Poppins;
+}
+.swal2-icon .swal2-success .swal2-icon-show{
+    justify-self: center;
+}
+.swal2-success-ring{
+    height: 100%;
+    width: 100%;
+}
+
+.swal2-confirm .swal2-styled{
+    background-color: var(--primary);
+    font-family: Poppins;
+}
