--- a/src/pages/Form/Form.css
+++ b/src/pages/Form/Form.css
@@ -1,5 +1,16 @@
 @import url('../../Helper/Reset.css');
-@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&display=swap');
+
+:root {
+    --h1: 48px;
+    --h2: 32px;
+    --h3: 20px;
+    --body: 16px;
+    --link: 16px;
+    --primary: #A92935;
+    --dark: #1E1E1E;
+    --white: #FFFFFF;
+}
 
 .container__form {
   display: flex;
@@ -16,7 +27,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 105vh;
+  height: 125vh;
   background-image: url("https://i.ibb.co/rcbJqdQ/Background-3.png");
   background-position: top;
   background-size: cover;
@@ -38,6 +49,17 @@ h1 {
   font-size: 19px;
   text-align: center;
   margin-bottom: 30px;
+
+}
+
+label {
+font-size: 14px !important;
+font-weight: 400;
+line-height: 22px;
+letter-spacing: -0.02em;
+text-align: left;
+color: var(--white);
+font-family: Poppins !important;
 
 }
 
@@ -71,23 +93,32 @@ input[type="submit"] {
   align-self: center;
   justify-self: center;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: #1E1E1E;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 50px;
+  box-shadow: 0px 4px 16px 12px #00000040;
+
 }
 
 .container__form__title {
-  font-family: 'Montserrat';
-  margin: 5px;
+font-family: Poppins;
+font-size: 20px;
+font-weight: 700;
+line-height: 30px;
+letter-spacing: -0.02em;
+text-align: center;
+color: var(--white);
+font-style: normal;
 }
 
 input[type="text"],
 input[type="email"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  height: 48px;
+  padding: 13px, 12px, 13px, 12px;
+  border-radius: 6px;
+  border: 1px;
+  gap: 10px;
+  background-color: var(--white) ;
   box-sizing: border-box;
   /* Esto hace que el padding no afecte el ancho total */
   font-size: 16px;
@@ -101,15 +132,34 @@ input[type="email"] {
 
 /* Estilos para textarea */
 textarea {
-  width: 100%;
-  padding: 10px;
+  padding: 13px, 12px, 47px, 12px;
+  border-radius: 6px;
+  border: 1px;
+  gap: 10px;
+
   margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
   box-sizing: border-box;
   font-size: 16px;
   resize: vertical;
   /* Permite cambiar solo la altura vertical */
   font-family: inherit;
   resize: none;
+}
+.submitButton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary);
+padding: 12px, 16px, 12px, 24px;
+border-radius: 6px;
+gap: 10px;
+font-family: Poppins;
+font-size: 16px;
+font-weight: 700;
+line-height: 22px;
+letter-spacing: -0.02em;
+text-align: left;
+color: var(--white);
+height: 48px;
+
 }
