feat, finished form

--- a/src/components/Success/Success.css
+++ b/src/components/Success/Success.css
@@ -12,21 +12,29 @@
     --white: #FFFFFF;
 }
 
-.mi-titulo-clase{
+.mi-titulo-clase {
     font-family: Poppins;
 }
-.mi-contenido-clase{
+
+.mi-contenido-clase {
     font-family: Poppins;
 }
-.swal2-icon .swal2-success .swal2-icon-show{
+
+.swal2-icon .swal2-success .swal2-icon-show {
     justify-self: center;
 }
-.swal2-success-ring{
+
+.swal2-success-ring {
     height: 100%;
     width: 100%;
 }
 
-.swal2-confirm .swal2-styled{
+.swal2-confirm {
     background-color: var(--primary);
     font-family: Poppins;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    background-color: var(--primary) !important;
+    font-family: Poppins !important;
 }
