fixing, internatioanl title and mobileheader closeicon

--- a/src/components/MobileHeader/MobileHeader.css
+++ b/src/components/MobileHeader/MobileHeader.css
@@ -37,6 +37,10 @@
     margin: 20px !important;
 }
 
+.css-1r2bn3-JoySvgIcon-root{
+color: white !important;
+}
+
 #logoModal {
     margin-bottom: 50px;
     margin-top: 30px;
