--- a/src/pages/AboutMe/SobreMi.css
+++ b/src/pages/AboutMe/SobreMi.css
@@ -141,6 +141,9 @@
         text-align: center;
         color: #FFFFFF;
         font-style: normal;
+        font-size: 40px;
+        
+        
 
 
     }
