--- a/src/pages/Form/Form.css
+++ b/src/pages/Form/Form.css
@@ -28,7 +28,7 @@
   left: 0;
   width: 100%;
   height: 125vh;
-  background-image: url("https://i.ibb.co/rcbJqdQ/Background-3.png");
+  background-image: url("../../assets/img/Background-3.webp");
   background-position: top;
   background-size: cover;
   background-attachment: fixed;
