--- a/src/pages/Main/main.css
+++ b/src/pages/Main/main.css
@@ -33,7 +33,7 @@
         left: 0;
         width: 100%;
         height: 105vh;
-        background-image: url("https://i.ibb.co/4jngJX5/Johan-mobile.jpg");
+        background-image: url("../../assets/img/mobilemain.webp");
         background-position: top;
         background-size: cover;
         background-attachment: fixed;
@@ -101,7 +101,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("https://i.ibb.co/4jngJX5/Johan-mobile.jpg");
+        background-image: url("../../assets/img/mobilemain.webp");
         background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
@@ -164,7 +164,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url("https://i.ibb.co/fMKCbMv/Background.png");
+        background-image: url("../../assets/img/main.webp");
         background-position-y: -120px;
         background-size: cover;
         background-position: top;
